added hero-image in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,5 +3,12 @@
 /* General */
 body {
     font-family: "Lato", sans-serif;
-    font-weight: 400;
+}
+
+/*-- Hero-image -- */
+.hero-image {
+    background: url(../images/dublin-liffey.jpg) no-repeat center center;
+    background-size: cover;
+    padding-top: 20%;
+    padding-bottom: 20%;
 }
