--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@
 
 /* General */
 body {
-    font-family: "Lato", sans-serif;
+    font-family: "Lato", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #777777;
 }
 
 /*-- Hero-image -- */
@@ -12,3 +13,32 @@ body {
     padding-top: 20%;
     padding-bottom: 20%;
 }
+
+/*-- About-heaidng--*/
+.heading {
+    text-align: center;
+    margin-top: 25px;
+    margin-top: 25px;
+}
+
+/*--- navbar ---- */
+.navbar-brand {
+    text-transform: uppercase;
+    font-family: '400, Lato', sans-serif;
+    font-weight: bold;
+    font-size: 120%;
+}
+
+.navbar-nav {
+    font-family: 'Lato', sans-serif;
+    color: #777777;
+    text-transform: uppercase;
+    text-decoration: black;
+    
+}
+
+nav a:hover {
+    border-bottom: 1px solid #000000;
+}
+
+/*-- Media queries */
