--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
+
+
 /* General */
 body {
     font-family: "Lato", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #777777;
+    background-color: #65ccb8;
 }
 
 /*-- Hero-image -- */
@@ -31,7 +33,7 @@ body {
 
 .navbar-nav {
     font-family: 'Lato', sans-serif;
-    color: #777777;
+    color: #182628;
     text-transform: uppercase;
     text-decoration: black;
     
