--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
-
-
 /* General */
 body {
-    font-family: "Lato", 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #65ccb8;
+    font-family: "700, Lato", Arial, sans-serif;
+    color: #65ccb8;
+}
+
+.heading {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 /*-- Hero-image -- */
@@ -17,16 +21,19 @@ body {
 }
 
 /*-- About-heaidng--*/
-.heading {
-    text-align: center;
-    margin-top: 25px;
-    margin-top: 25px;
+.content-border-style {
+    position:relative;
+    top:1px;
+    display:inline-block;
+    border:1px solid rgb(0, 0, 0);
+    margin: 5px;
+    background-color: #F76C6C;
 }
 
 /*--- navbar ---- */
 .navbar-brand {
     text-transform: uppercase;
-    font-family: '400, Lato', sans-serif;
+    font-family: "400, Lato", sans-serif;
     font-weight: bold;
     font-size: 120%;
 }
