--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,9 @@ body {
     border:1px solid rgb(0, 0, 0);
     margin: 5px;
     background-color: #F76C6C;
+    border-radius: 5px;
+    box-shadow: 3px 3px black;
+    opacity: .9;
 }
 
 /*--- navbar ---- */
