--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,11 @@
 /* General */
 body {
     font-family: "700, Lato", Arial, sans-serif;
-    color: #65ccb8;
+    background-color: #A8D0E6;
+}
+
+.btn-lg {
+    background-color: #F76C6C;
 }
 
 .heading {
@@ -23,14 +27,12 @@ body {
 /*-- About-heaidng--*/
 .content-border-style {
     position:relative;
-    top:1px;
-    display:inline-block;
     border:1px solid rgb(0, 0, 0);
     margin: 5px;
     background-color: #F76C6C;
     border-radius: 5px;
     box-shadow: 3px 3px black;
-    opacity: .9;
+    opacity: .95;
 }
 
 /*--- navbar ---- */
@@ -53,10 +55,23 @@ nav a:hover {
     border-bottom: 1px solid #000000;
 }
 
+/*-- Maps */
+#map {
+    width: 100%;
+    height: 500px;
+}
+
 /*-- Media queries */
 @media only screen and (max-width: 600px) {
     #hero-image {
         padding-top: 50%;
         padding-bottom: 50%;
+    }
+}
+
+@media only screen and (max-width: 1336px) {
+    #hero-image {
+        padding-top: 40%;
+        padding-bottom: 40%;
     }
 }
