--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,8 @@ body {
 
 .heading {
     text-align: center;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin-top: 1.6rem;
+    margin-bottom: 1.6rem;
 }
 
 /*-- Hero-image -- */
@@ -58,7 +58,8 @@ nav a:hover {
 /*-- Maps */
 #map {
     width: 100%;
-    height: 500px;
+    height: 500px ;
+    margin-bottom: 1rem;
 }
 
 /*-- Media queries */
