--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,34 @@ body {
     opacity: .95;
 }
 
+/*-- Contact Us/ Form --*/
+.contact {
+    text-align: center;
+    margin: auto;
+    display: block;
+}
+
+.form-container {
+    max-width: 26.25rem;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.form-input {
+  color: #ffffff;
+  font-family: "Lato", Arial, Helvetica, sans-serif;
+  font-weight:400;
+  font-size: 16px;
+  border-radius: 5px;
+  line-height: 20px;
+  border:2px solid #F76C6C;
+  padding: 13px;
+  margin-bottom: 15px;
+  width: 100%;
+  opacity: .95;
+}
+
 /*--- navbar ---- */
 .navbar-brand {
     text-transform: uppercase;
