--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
 /*-- About-heaidng--*/
 .content-border-style {
     position:relative;
-    border:1px solid rgb(0, 0, 0);
+    border:1px solid #000000;
     margin: 5px;
     background-color: #F76C6C;
     border-radius: 5px;
@@ -92,7 +92,7 @@ body {
     font-family: 'Lato', sans-serif;
     color: #182628;
     text-transform: uppercase;
-    text-decoration: black;
+    text-decoration: #000000;
 }
 
 nav a:hover {
