--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
+/* Attractions */
+.margin-top {
+    margin-top: 3rem;
+}
+
 /* General */
 body {
     font-family: "700, Lato", Arial, sans-serif;
@@ -118,5 +123,11 @@ nav a:hover {
     #hero-image {
         padding-top: 40%;
         padding-bottom: 40%;
+    }
+}
+
+@media only screen and (max-width: 667px) {
+    .resize-font {
+        font-size: 1.5rem;
     }
 }
