changed all slider opacity to 0 and slider current to opacity 1 so only the current slide is visible on the page for the user

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@
 
 /* General */
 body {
-    font-family: "700, Lato", Arial, sans-serif;
-    background-color: #A8D0E6;
+    font-family: "Lato", Arial, sans-serif;
+    margin: 0;
 }
 
 .btn-lg {
