--- a/assets/css/attractions.css
+++ b/assets/css/attractions.css
@@ -10,6 +10,29 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+/* Slider tutorial by Traversy Media - https://www.youtube.com/watch?v=wWWNrANNO1k&t=670s */
+.slide-container {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+.slider {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0; 
+    transition: opacity 0.7 ease-in-out;
+    top: 0;
+    left: 0;
+}
+
+.slider.current {
+    opacity: 1;
+}
+
+
+
 /* General */
 .heading {
     text-align: center;
