added carousel for activites section with content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 
 /*-- Hero-image -- */
 #hero-image {
-    background: url(../images/howth.jpg) no-repeat center center;
+    background: url(../images/dublin-liffey.jpg) no-repeat center center;
     background-size: cover;
     padding-top: 20%;
     padding-bottom: 20%;
