added user id and script tags for emails js before the head element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,13 @@ body {
     opacity: .95;
 }
 
+/*-- Carousel Img --*/
+.carousel-item src {
+    max-width: fit-content;
+    max-height: fit-content;
+}
+
+
 /*-- Contact Us/ Form --*/
 .contact {
     text-align: center;
