--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
+.card-header{
+    background-color: #f5f5dc;
+}
+
 /* Attractions */
 .margin-top {
     margin-top: 3rem;
