--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,3 +161,9 @@ nav a:hover {
     font-size: .80rem;
     }
 }
+
+@media only screen and (max-width: 440px) {
+  table {
+    font-size: 8px;
+  }
+}
